--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set-option -sa terminal-features ',xterm-kitty:RGB'
 # set-window-option -g xterm-keys on
 
