--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,6 +9,10 @@ initial_window_height 720
 
 enabled_layouts tall:bias=70, tall:bias=30, horizontal, stack
 
+background_image ~/Documents/nasa_nebula.png
+background_image_layout scaled
+background_opacity 0.05
+
 window_border_width 1.0
 window_margin_width 0.0
 single_window_margin_width 0.0
