--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,7 +11,8 @@ enabled_layouts tall:bias=70, tall:bias=30, horizontal, stack
 
 background_image ~/Documents/nasa_nebula.png
 background_image_layout scaled
-background_opacity 0.05
+background_opacity 1
+background_tint 0.95
 
 window_border_width 1.0
 window_margin_width 0.0
@@ -41,8 +42,8 @@ macos_show_window_title_in none
 # Colors {{{
 # selection_foreground #222222
 # selection_background #ccff00
-# foreground #dddddd
-# background #171717
+foreground #dddddd
+background #000000
 
 # black
 # color0   #000000
@@ -82,5 +83,5 @@ font_size 18.0
 
 # BEGIN_KITTY_THEME
 # macchiato
-include current-theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
