update background color and ting

--- a/kitty/.config/kitty/current_theme.conf
+++ b/kitty/.config/kitty/current_theme.conf
@@ -10,9 +10,9 @@
 
 # The basic colors
 foreground              #CAD3F5
-background              #24273A
+background              #000000
 selection_foreground    #24273A
-selection_background    #F4DBD6
+## selection_background    #F4DBD6
 
 # Cursor colors
 cursor                  #F4DBD6
