--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,15 @@
-set -g default-terminal "xterm-256color"
+set-option -sa terminal-overrides ",xterm-ghostty:RGB"
+# set -g default-terminal "xterm-kitty"
+set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',xterm-kitty:RGB'
+# set -ga terminal-overrides ",xterm-256color*:Tc"
 # set-window-option -g xterm-keys on
 
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
 set -g prefix C-a
-unbind C-b
 
+unbind C-b
 bind-key C-a send-prefix
 
 unbind %
@@ -59,3 +64,5 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+run '~/.tmux/plugins/tpm/tpm'
