alternate plugin syntax

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',xterm-kitty:RGB'
 # set -ga terminal-overrides ",xterm-256color*:Tc"
 # set-window-option -g xterm-keys on
-
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set -g prefix C-a
@@ -40,11 +40,12 @@ set -g mouse on
 set-option -sg escape-time 10
 
 set-option -g focus-events on
-
-set -g @plugin "tmux-plugins/tpm"
-set -g @plugin 'dracula/tmux'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @tpm_plugins '          \
+    tmux-plugins/tpm \
+    dracula/tmux \
+    christoomey/vim-tmux-navigator \
+    tmux-plugins/tmux-resurrect \
+'
 
 # dracular customization
 set -g @dracula-plugins "battery weather time"
