vim like navigation

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,11 @@ set-option -sa terminal-features ',xterm-kitty:RGB'
 set -g base-index 1
 set -g prefix C-a
 
+# Use Vim key bindings.
+setw -g mode-keys vi
+set -g status-keys vi
+
+# Change tmux prefic to C-a
 unbind C-b
 bind-key C-a send-prefix
 
