--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,8 @@ set -g prefix C-a
 # Use Vim key bindings.
 setw -g mode-keys vi
 set -g status-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Change tmux prefic to C-a
 unbind C-b
