--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',xterm-kitty:RGB'
 # set -ga terminal-overrides ",xterm-256color*:Tc"
 # set-window-option -g xterm-keys on
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
+set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin"
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set -g prefix C-a
@@ -40,18 +40,21 @@ set -g mouse on
 set-option -sg escape-time 10
 
 set-option -g focus-events on
-set -g @tpm_plugins '          \
-    tmux-plugins/tpm \
-    dracula/tmux \
-    christoomey/vim-tmux-navigator \
-    tmux-plugins/tmux-resurrect \
-'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'git@github.com:rose-pine/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @rose_pine_variant 'main'
+set -g @rose_pine_date_time '%Y-%m-%d(%a) %H:%M'
+set -g @rose_pine_bar_bg_disable 'off'
+set -g @rose_pine_only_windows 'off'
 
 # dracular customization
-set -g @dracula-plugins "battery weather time"
-set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-military-time true
+# set -g @dracula-plugins "battery weather time"
+# set -g @dracula-show-powerline true
+# set -g @dracula-show-fahrenheit false
+# set -g @dracula-military-time true
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -72,5 +75,9 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+# Automaticaly install tpm if not already installed
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 run '~/.tmux/plugins/tpm/tpm'
