fix zsh path on macos and tell tmux to run zsh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,7 @@ set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin"
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set -g prefix C-a
+set -g default-command /bin/zsh
 
 # Use Vim key bindings.
 setw -g mode-keys vi
