--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,8 @@
-set-option -sa terminal-overrides ",xterm-ghostty:RGB"
-# set -g default-terminal "xterm-kitty"
-set -g default-terminal "tmux-256color"
-set-option -sa terminal-features ',xterm-kitty:RGB'
-# set -ga terminal-overrides ",xterm-256color*:Tc"
-# set-window-option -g xterm-keys on
+# set -g default-terminal "tmux-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin"
+
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set -g prefix C-a
@@ -42,7 +40,8 @@ set-option -sg escape-time 10
 
 set-option -g focus-events on
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'git@github.com:rose-pine/tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
